samples/_failures_safe/1761332890_c93ca8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_565d94fe.c: In function ‘main’:
./samples/SAFE/__tmp_565d94fe.c:142:5: error: expected declaration or statement at end of input
  142 |     size_t len = strlen(input);
      |     ^~~~~~
